--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
                         <a href="contact.html" class="nav__link ">Contact</a>
                     </li>
                 </ul>
+
+                <div class="nav__close" id="nav-close">
+                    <i class="bx bx-x "></i>
+                </div>
             </div>
             <div class="nav__btns" id="login-button">
                 <div class="login__toggle" id="login-button">
